Fix off-centre cards!

--- a/static/styles.css
+++ b/static/styles.css
@@ -75,7 +75,6 @@ button {
   align-items: center;
   border: 3px solid #85aeed;
   border-radius: 15px;
-  width: 100%;
   padding: 2em;
   margin: 1em;
   opacity: 0.9;
